--- a/app/components/comments/list/commentListTemplate.hbs
+++ b/app/components/comments/list/commentListTemplate.hbs
@@ -1,6 +1,6 @@
     <label><h3>{{ this.length }} {{pluralize this.length 'Comment' 'Comments'}}</h3></label>
-    <textarea id="text" type="text" class="comment" placeholder="Enter your comment" /><br />
-    <button id="createComment">save</button>
+    <textarea id="text" type="text" class="comment-input" placeholder="Enter your comment" /><br />
+    <button id="createComment">Post Comment</button>
     <label id="commentsError" class="error"></label>
     <ul class="comments">
     </ul>
