--- a/app/components/comments/show/commentTemplate.hbs
+++ b/app/components/comments/show/commentTemplate.hbs
@@ -5,7 +5,7 @@
       <p class="commentSettings">
         <a href="#edit" id="editComment" data-id="{{ id }}">edit</a> 
         <a href="#cancel" id="cancelCommentEdit" style="display: none" data-id="{{ id }}">cancel</a> 
-        <button id="saveComment" data-id="{{ id }}">Save</button>
+        <button id="saveComment" data-id="{{ id }}">Post Comment</button>
         <a href="#delete" id="deleteComment" data-id="{{ id }}">delete</a>
       </p>
     {{/if}}
