Moved to marionette regions - no longer need our own view manager

--- a/server/views/client.handlebars
+++ b/server/views/client.handlebars
@@ -27,8 +27,11 @@
   </head>
   <body>
     <header>
-      <nav id="main"></nav>
+      <nav id="header"></nav>
     </header>
-    <content id="container"></content>
+    <div>
+        <div id="subhead"></div>
+    </div>
+    <content id="content"></content>
   </body>
 </html>
