Fixed bug where sub-nav would never go away

--- a/server/views/client.handlebars
+++ b/server/views/client.handlebars
@@ -27,11 +27,10 @@
   </head>
   <body>
     <header>
-      <nav id="header"></nav>
+        <nav id="primary"></nav>
+        <nav id="secondary"></nav>
     </header>
-    <div>
-        <div id="subhead"></div>
-    </div>
-    <content id="content"></content>
+    <section id="content"></section>
+    <footer></footer>
   </body>
 </html>
