Added simple styling to separate left + right pane

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -13,3 +13,4 @@
 @import "_shots.scss";      // Shots
 @import "_projects.scss";   // Projects
 @import "_base.scss";		// Base Styling
+@import "_layouts.scss";    // Layouts (two-column, full-width, etc)
