--- a/app/components/shots/show/shotCardTemplate.hbs
+++ b/app/components/shots/show/shotCardTemplate.hbs
@@ -1,4 +1,5 @@
 <a href="/{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }} by {{ user }}</a><br />
 <img src="{{ image }}" id="shotImage" class="shot">
 <p id="shotText">{{ text }}</p>
-<p class="shotCreator">{{ user }}</p><div class="shotComments"></div>
+<p class="shotCreator">{{ user }}</p>
+<a href="/{{ projectId }}/{{ id }}"><div class="shotComments"></div></a>
