--- a/app/components/shots/list/shotsListTemplate.hbs
+++ b/app/components/shots/list/shotsListTemplate.hbs
@@ -1,7 +1,12 @@
-    <label><h3>What are you working on?</h3></label>
-    <input id="image" type="url" class="input" size="58" placeholder="Enter a URL to an image"><br />
-    <textarea id="text" type="text" maxlength="300" class="input" placeholder="Enter any additional info" /><br />
-    <button id="createShot">save</button>
-    <label id="shotsError" class="error"></label>
+    <div class="shotsNav">
+        <label><h3>Screens</h3></label>
+        <button id="newShot">+</button>
+    </div>
+    <div class="newShotView">
+        <input id="image" type="url" class="input" size="58" placeholder="Enter a URL to an image"><br />
+        <textarea id="text" type="text" maxlength="300" class="input" placeholder="Enter any additional info" /><br />
+        <button id="createShot">save</button>
+        <label id="shotsError" class="error"></label>
+    </div>
     <ul class="shots">
     </ul>
