--- a/server/views/client.handlebars
+++ b/server/views/client.handlebars
@@ -23,6 +23,7 @@
         mixpanel.init("{{ cfg.MIXPANEL_KEY }}");
     </script>
     <!-- end Mixpanel -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 
   </head>
   <body>
