Users avatar now shows up on shots

--- a/app/components/shots/show/shotShowCardTemplate.hbs
+++ b/app/components/shots/show/shotShowCardTemplate.hbs
@@ -1,5 +1,5 @@
 <a href="/{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }} by {{ user }}</a><br />
 <img src="{{ image }}" id="shotImage" class="shot">
 <p id="shotText">{{ text }}</p>
-<p class="shotCreator">{{ user }}</p>
+<div class="shotCreator"></div>
 <a href="/{{ projectId }}/{{ id }}"><div class="shotComments"></div></a>
