Added UserCard to comments and nav

--- a/app/components/nav/navTemplate.hbs
+++ b/app/components/nav/navTemplate.hbs
@@ -5,7 +5,7 @@
 
   {{#if username}}
   {{! Check if user is logged in }}
-    <a href="#" id="username">@{{username}}</a>
+    <div class="user"></div>
     <a href="/logout" id="logout">Logout</a>
   {{else}}
     <a href="/login" id="login">Login</a>
