More work on the header, including a really shitty CSS dropdown for user-sign out. Might scrap this design soon, but at least we have *something*, as far as familiar UI elements go, to work with moving forward.

--- a/app/components/users/show/userShowCardTemplate.hbs
+++ b/app/components/users/show/userShowCardTemplate.hbs
@@ -1,1 +1,1 @@
-<img src="{{ profileImage }}" /> {{ username }}
+<span class="arrow-down"></span><img src="{{ profileImage }}" /><span class="username"> {{ username }} </span>
