--- a/app/components/nav/navTemplate.hbs
+++ b/app/components/nav/navTemplate.hbs
@@ -1,12 +1,21 @@
-  <a href="/" id="home">Home</a>
-  <a href="http://discuss.braddickason.com" id="discuss">Discuss</a>
-  <a href="/contribute" id="contribute">Contribute</a>
-  <a href="/help" id="help">Help Me!</a>
+{{! -- Main Nav Layout-- }}
+<div class="main-nav">
+  <a href="/" id="logo">Shots.</a>
+  <ul>
+    <li><a href="http://discuss.braddickason.com" id="discuss">Discuss</a></li>
+    <li><a href="/contribute" id="contribute">Contribute</a></li>
+    <li><a href="/help" id="help">Help Me!</a></li>
+  </ul>
 
   {{#if username}}
   {{! Check if user is logged in }}
     <div class="user"></div>
-    <a href="/logout" id="logout">Logout</a>
+    <ul id="user-dropdown" >
+      <li><a href="/logout" id="logout">Sign Out</a></li>
+    </ul>
+    
   {{else}}
     <a href="/login" id="login">Login</a>
   {{/if}}
+</div>
+{{! -- End Main Nav-- }}
