--- a/app/sass/partials/_app.scss
+++ b/app/sass/partials/_app.scss
@@ -3,27 +3,56 @@
 // Header Styles //
 
 header {
+	width: 100%;
+	height: 50px;
+	z-index: 9997;
+	position: relative;
 	background-color: #333;
 	background-color: rgba(47,47,47, .98);
 }
 
 #primary {
-	padding: 20px 40px;
+	max-width: 1100px;
 	min-width: 600px;
+	margin: 0 auto;
+	padding: 0 12px;
+	display: block;
+	div {
+		margin: 0;
+		padding: 0;
+		display: block;
+		height: 50px;
+	}
+	ul {
+		list-style-type: none;
+		float:left;
+		li {
+			float: left;
+			a {
+				padding: 0 30px 0 0;
+				line-height: 50px;
+				font-size: 12px;
+				color: #C7D2D6;
+			}
+		}
+	}
 	a {
-		color: #f5f7f8;
 		text-decoration: none;
-		padding-right: 30px;
 		&:hover {
 			color: #7DDCD4;
 			cursor: pointer;
 			text-decoration: none;
 		}
-		&:last-child {
-			padding-right:0;
-			float:right;
-		}
 	}
+}
+#logo {
+	font-weight: 600;
+	font-size: 20px;
+	letter-spacing: 1px;
+	float:left;
+	line-height: 50px;
+	padding-right: 60px;
+	color: $text-lightest;
 }
 #login {
 	float: right;
@@ -52,9 +81,87 @@ h5 {
 
 // User Card Styles //
 
-.user div > img {
-	height: 28px;
-	width: 28px;
-	
-
+.user  {
+	color: $text-light;
+	font-size: 12px;
+	display:inline-block;
+	float: right;
+	@include transition(visibility 120ms ease);
+	&:hover {
+		cursor: pointer;
+		@include transition(visibility 120ms ease);
+	}
+	> div {
+		display: inline-block;
+	}
+	div > img {
+	float: right;
+	margin-top: 14px;
+	height: 22px;
+	width: 22px;
+	@include border-radius(11px);
+	}
+	.username {
+		float: left;
+		margin: 19px 18px 0 0;
+	}
+	.arrow-down {
+		float:right;
+		margin: 24px 0 0 10px;
+		&:hover {
+			cursor: pointer;
+		}
+	}
 }
+ul#user-dropdown {
+	position: relative;
+	display: block;
+	float: right;
+	z-index: 9999;
+	margin-top: 40px;
+	background: #333;
+	background: rgba(47,47,47, .98);
+	left: 118px;
+	width: 120px;
+	visibility: hidden;
+	@include transition(visibility 120ms ease);
+	@include border-radius(0 0 4px 4px);
+	li {
+		float: left;
+		width: 100%;
+	}
+	#logout {
+		float: left;
+		padding-left: 30px;
+
+	}
+}
+.user:hover+#user-dropdown, #user-dropdown:hover {
+	position: relative;
+	display: block;
+	float: right;
+	z-index: 9999;
+	margin-top: 40px;
+	background: #333;
+	background: rgba(47,47,47, .98);
+	left: 118px;
+	width: 120px;
+	visibility: visible;
+	@include transition(visibility 120ms ease);
+	@include border-radius(0 0 4px 4px);
+	li {
+		float: left;
+		width: 100%;
+	}
+	#logout {
+		float: left;
+		padding-left: 30px;
+	}
+}
+#login {
+	float: right;
+	margin-top: 19px;
+	font-size: 12px;
+	color: $text-light;
+}
+
