--- a/app/sass/partials/_variables.scss
+++ b/app/sass/partials/_variables.scss
@@ -1,8 +1,9 @@
 /* Variables Partial  - contains colors, fonts, etc. */
 
 /* Text Colors */
-$text-light:     #FFF;  // Light text for use on dark backgrounds
-$text-dark:      #404040;   // Dark text for use on light backgrounds
+$text-lightest:     #F5F7F8;   // Light text for use on dark backgrounds
+$text-light:  	#C7D2D6;    // Slightly darker light text for dark backgrounds
+$text-dark:      #404040;    // Dark text for use on light backgrounds
 $text-cta:       #808080;     // Text for call to action/buttons
 $text-hover:     black;
 
