--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2,15 +2,17 @@
 
 @import "compass/reset";	// CSS Style Reset
 @import "compass/css3";   // CSS3 Optimizers for things like declaring border-radius
+@import "compass/css3/user-interface"; 		// CSS3 UI Elements
 @import "compass/typography/vertical_rhythm";
 @import "compass/utilities/general";
+@import "compass/css3/border-radius"; // CSS3 Border Radius for all browsers
 
 /* Custom Partials */
 @import "partials/_variables.scss";	// Variables: Color, size, etc. 
-@import "partials/_app.scss";        // Base app styles (body, etc)
-@import "partials/_images.scss";     // Anything related to images
+@import "partials/_app.scss";        	// Base app styles (body, etc)
+@import "partials/_images.scss";     	// Anything related to images
 @import "partials/_comments.scss";   // Comments
-@import "partials/_shots.scss";      // Shots
-@import "partials/_projects.scss";   // Projects
+@import "partials/_shots.scss";      	// Shots
+@import "partials/_projects.scss";   	// Projects
 @import "partials/_base.scss";		// Base Styling
-@import "partials/_layouts.scss";    // Layouts (two-column, full-width, etc)
+@import "partials/_layouts.scss";    	// Layouts (two-column, full-width, etc)
